--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,13 +54,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     // ReactiveX dependencies
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     // recyclerview dependencies
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+
+    //picassoo - image loading
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Gson (JSON parser) dependency
     implementation 'com.google.code.gson:gson:2.8.6'
